time field to topic-dashboard added; time format changed in some of templates; mistake in TopicMapper fixed

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -30,8 +30,8 @@
     </nav>
 </div>
 
-<footer th:fragment="footer">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+<footer th:fragment="footer" class="page-footer font-small">
+    <div class="container footer-copyright text-center py-3">© 2020 Copyright:
         <a href=""> JA Course [team 1]</a>
     </div>
 </footer>
