--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,8 +21,9 @@
 
             </div>
 
-            <div class="col-sm-10 mx-auto py-3">
-                    <div style="float: left;" class="col-sm-5 text-left border border-light py-4 px-5 mx-2 my-2" th:each="c : ${conferences}">
+            <div class="mx-auto float-none">
+                <div class="row">
+                    <div class="col-sm-4 text-left border border-dark py-3 px-3 my-2" style="background-color: whitesmoke;" th:each="c : ${conferences}">
 
                         <span><a th:href="${c.getId()}  + '/schedule'" class="text-decoration-none text-dark"><h4 class="h4" th:text="${c.getTheme()}"></h4></a></span>
                         <p><b>Time:</b>
@@ -30,7 +31,7 @@
                         <p th:text="${c.getDescription()}"></p>
                         <p><b>Address:</b> <span th:text="${c.getAddress()}"></span></p>
                     </div>
-
+                </div>
                 </div>
 
         </div>
@@ -38,6 +39,7 @@
 
     </div>
 </div>
-<div th:replace="fragments :: footer"></div>
+
+<footer th:replace="fragments :: footer"></footer>
 </body>
 </html>
