--- a/src/main/resources/templates/stafflist.html
+++ b/src/main/resources/templates/stafflist.html
@@ -24,30 +24,30 @@
         </div>
     </tr>
     <tr th:each="staff : ${staffs}">
-        <td th:if="${#sets.contains(rolesAuth,'SUPERVISOR')} or ${!T(java.util.Collections).disjoint(staffAuth.getColabs_id(),staff.getColabs_id())} " th:text="${staff.getId()}">Id</td>
-        <td th:if="${#sets.contains(rolesAuth,'SUPERVISOR')} or ${!T(java.util.Collections).disjoint(staffAuth.getColabs_id(),staff.getColabs_id())} " th:text="${staff.getEmail()}">Email</td>
-        <td th:if="${#sets.contains(rolesAuth,'SUPERVISOR')} or ${!T(java.util.Collections).disjoint(staffAuth.getColabs_id(),staff.getColabs_id())} " th:text="${staff.getName()}">Name</td>
-        <td th:if="${#sets.contains(rolesAuth,'SUPERVISOR')} or ${!T(java.util.Collections).disjoint(staffAuth.getColabs_id(),staff.getColabs_id())} " headers="roles">
+        <td  th:text="${staff.getId()}">Id</td>
+        <td  th:text="${staff.getEmail()}">Email</td>
+        <td  th:text="${staff.getName()}">Name</td>
+        <td  headers="roles">
             <span th:each="a, role : ${staff.getRoles()}" th:text="${!role.last} ? ${a} + ' ,': ${a}"></span>
         </td>
         <div sec:authorize="hasAnyAuthority('SUPERVISOR')">
-        <td  class="form-group blu-margin">
-            <select class="form-control" id="dropOperatorq">
-                <option th:each="conf : ${staff.getColabs_id()}"
-                        th:text="${confService.findById(conf).getTheme()}"></option>
-            </select>
-        </td>
+            <td  class="form-group blu-margin">
+                <select class="form-control" id="dropOperatorq">
+                    <option th:each="conf : ${staff.getColabs_id()}"
+                            th:text="${confService.findById(conf).getTheme()}"></option>
+                </select>
+            </td>
         </div>
 
 
-        <td th:if="${#sets.contains(rolesAuth,'ADMIN')} and ${!T(java.util.Collections).disjoint(staffAuth.getColabs_id(),staff.getColabs_id())} " class="form-group blu-margin">
+        <td  class="form-group blu-margin">
             <select class="form-control" id="dropOperator" th:with="commonConfId=${staff.getColabs_id().retainAll(staffAuth.getColabs_id())}">
                 <option  th:each="conf : ${staff.getColabs_id()}"
-                        th:text="${confService.findById(conf).getTheme()}"></option>
+                         th:text="${confService.findById(conf).getTheme()}"></option>
             </select>
         </td>
 
-        <td th:if="${#sets.contains(rolesAuth,'SUPERVISOR')} or ${!T(java.util.Collections).disjoint(staffAuth.getColabs_id(),staff.getColabs_id())} ">
+        <td >
             <a class="btn btn-success btn-sm" th:href="@{'/staff/add-privileges/'+${staff.getId()}}">Edit</a>
         </td>
         <div sec:authorize="hasAnyAuthority('SUPERVISOR')">
