--- a/src/main/resources/templates/conference-page.html
+++ b/src/main/resources/templates/conference-page.html
@@ -12,26 +12,29 @@
 <div th:replace="fragments :: admin-header"></div>
 <div class="container-fluid py-5">
     <div class="col-sm-8 mx-auto py-3">
-        <div class="row py-3 flex-column">
-            <h3 class="text-center h3 py-3 text-uppercase"><p th:text="${Confid.getTheme()}"></p><a
-                    class="btn btn-sm btn-info mx-3" th:href="@{'/staff/conference-edit/'+${confId}}">Edit</a></h3>
-            <p class="text-center py-2"><b
-                    th:text="${Confid.getStart().toLocalDate().toString()} + ' '+ ${Confid.getStart().toLocalTime().toString()}+' - '"></b>
-                <b th:text="${Confid.getEnd().toLocalDate().toString()}+' '+ ${Confid.getEnd().toLocalTime().toString()}"></b>
+        <div class="row  flex-column">
+            <h3 class="text-center h3 py-3 text-uppercase"><p th:text="${conference.getTheme()}"></p>
+                <a class="btn btn-sm btn-info mx-3" th:href="@{'/staff/conference-edit/'+${confId}}"
+                   data-toggle="tooltip" title="Edit conference">Edit</a></h3>
+            <p class="text-center py-2">
+                <b th:text="'Start date: '+${#temporals.format(conference.getStart(), 'dd-MM-yyyy HH:MM')}"></b>
+                <br><b th:text="'End date: '+${#temporals.format(conference.getEnd(), 'dd-MM-yyyy HH:MM')}"></b>
             </p>
-            <p class="px-5" th:text="${Confid.getDescription()}"></p>
+            <p class="px-5" th:text="${conference.getDescription()}"></p>
         </div>
     </div>
     <hr>
-    <div class="col-sm-8 mx-auto py-3">
+    <div class="col-sm-10 mx-auto py-3">
         <h2 class="h2 text-center py-3">List Of Topics <a class="btn btn-success"
-                                                          th:href="@{'/staff/topic-add/'+${confId}}">Add topic</a></h2>
+                                                          th:href="@{'/staff/topic-add/'+${confId}}"
+                                                          data-toggle="tooltip" title="Add new topic">Add topic</a></h2>
 
         <div class="row py-3 topic" th:each="topic : ${allTopic}">
 
             <div class="col-sm-3 mx-auto">
                 <figure class="figure">
-                    <img src="../../../../resources/images/image-placeholder.png" th:src="@{'/images/'+${topic.getSpeakerimg()}}"
+                   <img src="../../../../resources/images/image-placeholder.png"
+                         th:src="@{'/images/'+${topic.getSpeakerimg()}}"
                          class="figure-img img-fluid rounded" height="350" width="350"/>
                     <figcaption class="figure-caption" th:text="${topic.getSpeaker()}">Speaker picture above, the name
                         and descr here
@@ -41,15 +44,23 @@
                     </figcaption>
                 </figure>
             </div>
-            <div class="col-sm-8 mx-auto">
-                <a th:href="@{'/staff/topic-dashboard/'+${topic.getId()}}"><h4 class="h4" th:text="${topic.getTheme()}">First topic name</h4></a>
-                <a class="btn btn-info btn-sm" th:href="@{'/staff/topic-edit/'+${topic.getId()}}">Edit</a>
-                <a class="btn btn-danger btn-sm mx-3" th:href="@{'/staff/topic-delete/'+${topic.getId()}}" value="" name="">
-                    <i class="fas fa-skull-crossbones"></i></a>
+            <div class="col-sm-5 mx-auto">
+                <a th:href="@{'/staff/topic-dashboard/'+${topic.getId()}}"><h4 class="h4" th:text="${topic.getTheme()}"
+                                                                               data-toggle="tooltip"
+                                                                               title="Manage topics start/end dates and see questions">
+                    First topic name</h4></a>
+
                 <p class="py-2"
                    th:text="${topic.getStart().toLocalTime().toString()}+' - '+ ${topic.getEnd().toLocalTime().toString()}">
                     Time: 11:00 - 11:45</p>
                 <p th:text="${topic.getDescription()}">Topic description </p>
+            </div>
+            <div class="col-sm-2 mx-auto">
+                <a class="btn btn-info btn-sm" th:href="@{'/staff/topic-edit/'+${topic.getId()}} " data-toggle="tooltip"
+                   title="Edit topic">Edit</a>
+                <a class="btn btn-danger btn-sm mx-3" th:href="@{'/staff/topic-delete/'+${topic.getId()}}"
+                   data-toggle="tooltip" title="Delete topic">
+                    <i class="fas fa-skull-crossbones"></i></a>
             </div>
 
         </div>
