--- a/src/main/resources/templates/conference-add.html
+++ b/src/main/resources/templates/conference-add.html
@@ -16,12 +16,14 @@
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
     <form action="#" th:action="@{'/staff/conference-add'}" th:object="${conference}" method="POST">
-        <div class="form-group">
-            <div class="form-group col-md-6">
-                <label for="inputName">Name</label>
-                <input type="text" class="form-control" th:field="*{theme}" id="inputName" placeholder="Conference Name">
+        <div class="form-row">
+            <div class="form-group col-md-12">
+                <label for="inputName">Theme</label>
+                <input type="text" class="form-control" th:field="*{theme}" id="inputName"
+                       placeholder="Conference Theme">
             </div>
         </div>
+
         <div class="form-row">
 
             <div class="form-group col-md-6">
@@ -34,9 +36,9 @@
                 <label for="conf-time-end">End</label>
                 <input type="datetime-local" th:field="*{end}" class="form-control" id="conf-time-end"
                        name="meeting-time" value="2020-03-30T00:00"
-                       min="2020-03-30T00:00" >
+                       min="2020-03-30T00:00">
 
-            <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}" ></div>
+                <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></div>
 
 
             </div>
@@ -44,7 +46,7 @@
 
         </div>
         <div class="form-group">
-            <label for="inputAddress">Address</label>
+            <label for="inputAddress">Venue</label>
             <input type="text" th:field="*{address}" class="form-control" id="inputAddress" placeholder="1234 Main St">
         </div>
         <div class="form-group">
@@ -53,10 +55,6 @@
                       placeholder="Description"></textarea>
         </div>
 
-        <!--            TODO: Do wee need this image input here?-->
-
-
-        <!--this button in case of success should do redirect to /staffdashboard -->
         <button type="submit" class="btn btn-info">Save</button>
 
     </form>
