--- a/src/main/resources/templates/conference-edit.html
+++ b/src/main/resources/templates/conference-edit.html
@@ -16,11 +16,11 @@
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
     <form action="#" th:action="@{'/staff/conference-edit/'+${confId}}" th:object="${conference}" method="post">
-        <div class="form-group">
-            <div class="form-group col-md-6">
-                <label for="inputName">Name</label>
+        <div class="form-row">
+            <div class="form-group col-md-12">
+                <label for="inputName">Theme</label>
                 <textarea type="text" th:field="*{theme}" class="form-control" id="inputName" name="textarea" rows="1"
-                          cols="50">Get name from DB</textarea>
+                          cols="50">Get theme from DB</textarea>
             </div>
         </div>
         <div class="form-row">
@@ -37,10 +37,10 @@
                        name="meeting-time" th:field="*{end}"
                        min="2020-03-30T00:00">
             </div>
-            <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}" ></div>
+            <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></div>
         </div>
         <div class="form-group">
-            <label for="inputAddress">Address</label>
+            <label for="inputAddress">Venue</label>
             <textarea type="text" th:field="*{address}" class="form-control" id="inputAddress" name="textarea" rows="1"
                       cols="50">Get address from DB</textarea>
 
@@ -50,8 +50,6 @@
             <textarea type="text" th:field="*{description}" class="form-control"
                       id="inputDescr">Get description from DB</textarea>
         </div>
-
-                <!--this button in case of success should do redirect to /conference-page -->
         <button type="submit" class="btn btn-info">Save</button>
     </form>
 
