--- a/src/main/resources/templates/topic-add.html
+++ b/src/main/resources/templates/topic-add.html
@@ -9,55 +9,61 @@
 </head>
 <body>
 <div th:replace="fragments :: admin-header"></div>
-<div class="container-fluid mx-auto mt-5">
-    <h1 class="text-center">Add Topic</h1>
+<div class="container-fluid mx-auto mt-3">
+    <h4 class="text-center">Add Topic</h4>
 </div>
 
-<div class="container-fluid mx-auto mt-5 col-sm-5">
+<div class="container-fluid mx-auto mt-3 col-sm-6">
 
-    <form form action="#" th:action="@{'/staff/topic-add/'+${confId}}" th:object="${topic}" method="POST" enctype="multipart/form-data">
+    <form form action="#" th:action="@{'/staff/topic-add/'+${confId}}" th:object="${topic}" method="POST"
+          enctype="multipart/form-data">
         <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="inputEmail4">Name</label>
-                <input type="text" th:field="*{theme}" class="form-control" id="inputEmail4" placeholder="Topic Name">
+            <div class="form-group col-md-12">
+                <label for="inputEmail4">Theme</label>
+                <input type="text" th:field="*{theme}" class="form-control" id="inputEmail4" placeholder="Topic theme">
             </div>
-            <div class="form-group col-md-6">
-                <label for="inputSpeaker">Speaker</label>
-                <input type="text" th:field="*{speaker}"class="form-control" id="inputSpeaker" placeholder="Name, position">
 
-            </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
-            <label for="conf-time-start">Start at:</label>
-            <input type="datetime-local" th:field="*{start}" class="form-control" id="conf-time-start"
-                   name="meeting-time" value=""
-                   min="2020-04-01T00:00" max="2025-09-14T00:00">
+                <label for="conf-time-start">Start at:</label>
+                <input type="datetime-local" th:field="*{start}" class="form-control" id="conf-time-start"
+                       name="meeting-time" value=""
+                       min="2020-04-01T00:00" max="2025-09-14T00:00">
             </div>
             <div class="form-group col-md-6">
-            <label for="conf-time-end">End at:</label>
-            <input type="datetime-local" th:field="*{end}" class="form-control" id="conf-time-end"
-                   name="meeting-time" value=""
-                   min="2020-04-01T00:00" max="2025-09-14T00:00">
+                <label for="conf-time-end">End at:</label>
+                <input type="datetime-local" th:field="*{end}" class="form-control" id="conf-time-end"
+                       name="meeting-time" value=""
+                       min="2020-04-01T00:00" max="2025-09-14T00:00">
             </div>
-            <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}" ></div>
+            <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></div>
 
         </div>
         <div class="form-group">
             <label for="inputDescr">Description</label>
-            <textarea type="text" th:field="*{description}"class="form-control" id="inputDescr" placeholder="Apartment, studio, or floor"></textarea>
+            <textarea type="text" th:field="*{description}" class="form-control" id="inputDescr"
+                      placeholder="Topic description"></textarea>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-7">
+                <label for="inputSpeaker">Speaker</label>
+                <input type="text" th:field="*{speaker}" class="form-control" id="inputSpeaker"
+                       placeholder="Name, position">
+
+            </div>
+
+            <div class="form-group col-md-5">
                 <label for="uploadImage">Upload speaker picture</label>
                 <input type="file" name="file" class="form-control-file" id="uploadImage">
             </div>
-            <div class="form-group">
-                <label for="inputDescrSpeaker">Description</label>
-                <textarea type="text" th:field="*{speakerdesc}"class="form-control" id="inputDescrSpeaker" placeholder="Apartment, studio, or floor"></textarea>
-            </div>
-            <div class="form-group col-md-4">
 
+        </div>
+        <div class="form-group">
+            <div class="form-group">
+                <label for="inputDescrSpeaker">Speaker description</label>
+                <textarea type="text" th:field="*{speakerdesc}" class="form-control" id="inputDescrSpeaker"
+                          placeholder="Short description about speaker"></textarea>
             </div>
 
         </div>
