--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -10,12 +10,13 @@
 </head>
 <body>
 <!--TODO: hide from users who are not visitors-->
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;" >
+ <nav class="navbar navbar-light" style="background-color: #e3f2fd;"  th:if="${isVisitorHasCurrentConference}">
 
     <a class="navbar-brand" th:href="@{'/liveconference/now/'+ ${conference.getId()}}"> Back to live chat <i class="far fa-caret-square-right"></i></a>
     <a class="navbar-brand" href="#"><i class="far fa-sad-tear"></i> Leave</a>
 
 </nav>
+
 <div class="container-fluid py-5">
     <div class="col-sm-8 mx-auto py-3">
     <h3 class="text-center h3 py-3" th:text="${conference.getTheme()}"></h3>
@@ -26,10 +27,11 @@
     <div class="col-sm-8 mx-auto py-3">
         <div class="row py-3 topic" th:each="t : ${topics}">
         <div class="col-sm-8 mx-auto">
-
+<div th:if="${isVisitorHasCurrentConference}">
             <div th:if="${((currentTime.isAfter(t.getStart())) && (currentTime.isBefore(t.getEnd())))}">
             <span style="color: limegreen;">NOW: <h4 class="h4" th:text="${t.getTheme()}"></h4></span>
             </div>
+</div>
             <div th:if="${!((currentTime.isAfter(t.getStart())) && (currentTime.isBefore(t.getEnd())))}">
                 <h4 class="h4" th:text="${t.getTheme()}"></h4>
             </div>
