--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -13,7 +13,8 @@
  <nav class="navbar navbar-light" style="background-color: #e3f2fd;"  th:if="${isVisitorHasCurrentConference}">
 
     <a class="navbar-brand" th:href="@{'/liveconference/now/'+ ${conference.getId()}}"> Back to live chat <i class="far fa-caret-square-right"></i></a>
-    <a class="navbar-brand" href="#"><i class="far fa-sad-tear"></i> Leave</a>
+     <p>Welcome <i class="" th:text="${email.substring(0,email.indexOf('@'))}">Visitor</i>!</p>
+     <a class="navbar-brand" th:href="@{'/liveconference/logout/'+${confId}}"> <i class="far fa-sad-tear"></i> Leave</a>
 
 </nav>
 
