add img path to schedule.html

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -10,40 +10,46 @@
 </head>
 <body>
 <!--TODO: hide from users who are not visitors-->
- <nav class="navbar navbar-light" style="background-color: #e3f2fd;"  th:if="${isVisitorHasCurrentConference}">
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;" th:if="${isVisitorHasCurrentConference}">
 
-    <a class="navbar-brand" th:href="@{'/liveconference/now/'+ ${conference.getId()}}"> Back to live chat <i class="far fa-caret-square-right"></i></a>
-     <p>Welcome <i class="" th:text="${email.substring(0,email.indexOf('@'))}">Visitor</i>!</p>
-     <a class="navbar-brand" th:href="@{'/liveconference/logout/'+${confId}}"> <i class="far fa-sad-tear"></i> Leave</a>
+    <a class="navbar-brand" th:href="@{'/liveconference/now/'+ ${conference.getId()}}"> Back to live chat <i
+            class="far fa-caret-square-right"></i></a>
+    <p>Welcome <i class="" th:text="${email.substring(0,email.indexOf('@'))}">Visitor</i>!</p>
+    <a class="navbar-brand" th:href="@{'/liveconference/logout/'+${confId}}"> <i class="far fa-sad-tear"></i> Leave</a>
 
 </nav>
 
 <div class="container-fluid py-5">
     <div class="col-sm-8 mx-auto py-3">
-    <h3 class="text-center h3 py-3" th:text="${conference.getTheme()}"></h3>
-    <p class="text-center"><span th:text="${#temporals.format(conference.getStart(), 'HH:mm')}"></span> - <span th:text="${#temporals.format(conference.getEnd(), 'HH:mm')}"></span></p>
-    <p class="px-3" th:text="${conference.getDescription()}"></p>
+        <h3 class="text-center h3 py-3" th:text="${conference.getTheme()}"></h3>
+        <p class="text-center"><span th:text="${#temporals.format(conference.getStart(), 'HH:mm')}"></span> - <span
+                th:text="${#temporals.format(conference.getEnd(), 'HH:mm')}"></span></p>
+        <p class="px-3" th:text="${conference.getDescription()}"></p>
     </div>
-<hr>
+    <hr>
     <div class="col-sm-8 mx-auto py-3">
         <div class="row py-3 topic" th:each="t : ${topics}">
-        <div class="col-sm-8 mx-auto">
-<div th:if="${isVisitorHasCurrentConference}">
-            <div th:if="${((currentTime.isAfter(t.getStart())) && (currentTime.isBefore(t.getEnd())))}">
-            <span style="color: limegreen;">NOW: <h4 class="h4" th:text="${t.getTheme()}"></h4></span>
+            <div class="col-sm-8 mx-auto">
+                <div th:if="${isVisitorHasCurrentConference}">
+                    <div th:if="${((currentTime.isAfter(t.getStart())) && (currentTime.isBefore(t.getEnd())))}">
+                        <span style="color: limegreen;">NOW: <h4 class="h4" th:text="${t.getTheme()}"></h4></span>
+                    </div>
+                </div>
+                <div th:if="${!((currentTime.isAfter(t.getStart())) && (currentTime.isBefore(t.getEnd())))}">
+                    <h4 class="h4" th:text="${t.getTheme()}"></h4>
+                </div>
+                <!--TODO: add LocalDateTime parser to show HH:MM time only-->
+                <p>Time: <span th:text="${#temporals.format(t.getStart(), 'HH:mm')}"></span> - <span
+                        th:text="${#temporals.format(t.getEnd(), 'HH:mm')}"></span></p>
+                <p th:text="${t.getDescription()}"></p>
             </div>
-</div>
-            <div th:if="${!((currentTime.isAfter(t.getStart())) && (currentTime.isBefore(t.getEnd())))}">
-                <h4 class="h4" th:text="${t.getTheme()}"></h4>
-            </div>
-<!--TODO: add LocalDateTime parser to show HH:MM time only-->
-            <p>Time: <span th:text="${#temporals.format(t.getStart(), 'HH:mm')}"></span> - <span th:text="${#temporals.format(t.getEnd(), 'HH:mm')}"></span></p>
-            <p th:text="${t.getDescription()}"></p>
-        </div>
             <div class="col-sm-3 mx-auto">
                 <figure class="figure">
-                    <img src="../../../../resources/images/image-placeholder.png" th:src="@{/images/image-placeholder.png}" class="figure-img img-fluid rounded" height="350" width="350"/>
-                    <figcaption class="figure-caption" th:text="${t.getSpeaker()} + ', '+ ${t.getSpeakerdesc()}"></figcaption>
+                    <img src="../../../../resources/images/image-placeholder.png"
+                         th:src="@{'/images/'+${t.getSpeakerimg()}}" class=" figure-img img-fluid rounded" height="350"
+                    width="350"/>
+                    <figcaption class="figure-caption"
+                                th:text="${t.getSpeaker()} + ', '+ ${t.getSpeakerdesc()}"></figcaption>
                 </figure>
                 <hr>
             </div>
