--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Welcome to <span th:text="${conference.getTheme()}"></span></title>
+    <title th:text="${conference.getTheme()}"></title>
     <link href="../static/css/all.css" rel="stylesheet" th:href="@{/css/all.css}">
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
