--- a/src/main/resources/templates/topicquestions.html
+++ b/src/main/resources/templates/topicquestions.html
@@ -78,7 +78,6 @@
                     <th scope="col" style="width: 50%;">Question</th>
                     <th scope="col" style="width: 20%;">User</th>
                     <th scope="col" style="width: 20%;">Time</th>
-<!--                    TODO: add sorting by time, likes and users-->
                 </tr>
                 </thead>
                 <tbody>
@@ -103,8 +102,8 @@
 </div>
 <div class="container-fluid py-1 fixed-bottom bg-light">
     <div class=" col-sm-6 mx-auto py-1">
-        <form th:action="@{/question/add-question}" method="POST" class="form-inline mx-auto">
-            <textarea class="form-control" th:name="question" rows="2" style="float: left; width: 80%;"></textarea>
+        <form th:action="'/question/' + ${topic.getId()} + '/add-question'" method="POST" class="form-inline mx-auto">
+            <textarea class="form-control" th:name="question" rows="2" style="float: left; width: 80%;" required></textarea>
             <input type="hidden" th:name="topicId" th:value="${topic.getId()}">
             <input type="hidden" th:name="creatorId" th:value="${visitor.getId()}">
             <input type="hidden" th:name="answerStatus" th:value="false">
