change img path on view

--- a/src/main/resources/templates/conference-page.html
+++ b/src/main/resources/templates/conference-page.html
@@ -34,7 +34,9 @@
             <div class="col-sm-3 mx-auto">
                 <figure class="figure">
                    <img src="../../../../resources/images/image-placeholder.png"
-                         th:src="@{'/images/'+${topic.getSpeakerimg()}}"
+
+                    th:src="@{${topic.getSpeakerimg()}}"
+
                          class="figure-img img-fluid rounded" height="350" width="350"/>
                     <figcaption class="figure-caption" th:text="${topic.getSpeaker()}">Speaker picture above, the name
                         and descr here
