warning message for user if a conference or any topic is not available added; bug in welcomeController fixed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
         <div class="">
             <h1>Welcome!</h1>
-            <p>find and scar QR-code to enter the conference you are visiting</p>
+            <p>find and scan QR-code to enter the conference you are visiting</p>
 
 
             <div>
