--- a/src/main/resources/templates/topicquestions.html
+++ b/src/main/resources/templates/topicquestions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Live NOW: Conference name</title>
+    <title th:text="${conference.getTheme()}">Live NOW</title>
     <link href="../static/css/all.css" rel="stylesheet" th:href="@{/css/all.css}">
     <link href="../static/css/style.css" rel="stylesheet" th:href="@{/css/style.css}"/>
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
@@ -22,7 +22,7 @@
 
         <h3 class="text-center h3 py-3" th:text="${conference.getTheme()}">CONFERENCE NAME</h3>
         <ul class="nav mx-auto">
-            <li class="nav-item h4 text-center mx-auto"><span style="color: green;"><i
+            <li class="nav-item h4 py-3 text-center mx-auto"><span style="color: green;"><i
                     class="fab fa-rocketchat"></i></span> NOW: <h2 th:text="${topic.getTheme()}"></h2> <a class="btn btn-outline-info"
                                                                                                           th:href="'/liveconference/now/' + ${conference.getId()} + '/schedule'">Schedule</a></li>
         </ul>
@@ -107,8 +107,7 @@
             <input type="hidden" th:name="topicId" th:value="${topic.getId()}">
             <input type="hidden" th:name="creatorId" th:value="${visitor.getId()}">
             <input type="hidden" th:name="answerStatus" th:value="false">
-            <button type="submit" class="btn btn-success px-2 mx-1" style="height: 50px; width: 15%;"><i
-                    class="fas fa-chevron-right"></i></button>
+            <button type="submit" class="btn btn-success px-2 mx-1" style="height: 50px; width: 15%;">OK</button>
         </form>
     </div>
 </div>
